@@ -1,0 +1,103 @@
+<?xml version="1.0" encoding="utf-8" standalone="yes"?>
+<strings>
+  <!-- Script Strings -->
+  <string id="32000">Felismert előadók</string>
+  <string id="32001">Minden előadó</string>
+  <string id="32002">Előadók keresése</string>
+  <string id="32003">Albumok keresése</string>
+  <string id="32004">Automata letöltés</string>
+  <string id="32005">Helyi cd-kép lista mentése</string>
+  <string id="32006">Beállítások</string>
+  <string id="32007">Helyi előadók: %s</string>
+  <string id="32008">Helyi cd-képek: %s</string>
+  <string id="32009">Kilépés</string>
+  <string id="32010">Helyi albumok: %s</string>
+  <string id="32011">Haladó</string>
+  <string id="32012">Helyi adatbázis frissítése</string>
+  <string id="32013">Zenei adatbázis tisztítása</string>
+  <string id="32014">Zenei adatbázis frissítése</string>
+  <string id="32015">Helyi adatbázis törlése?</string>
+  <string id="32016">Kérlek várj....</string>
+  <string id="32017">Helyi cd-kép lista mentési helye</string>
+  <string id="32018">cd-kép biztonsági-mentés helye</string>
+  <string id="32019">Biztonsági mentés formátuma: </string>
+  <string id="32020">Zenei adatbázis beolvasása</string>
+  <string id="32021">Kiegészítő adatbázis létrehozása</string>
+  <string id="32022">Elérhető cd-kép választása</string>
+  <string id="32023">Letöltés sikeres!</string>
+  <string id="32024">cd-kép letöltődött!</string>
+  <string id="32025">Elérési utak ahova cd-kép nem töltődött le</string>
+  <string id="32026">Letöltési hiba!</string>
+  <string id="32027">cd-kép nem töltődött le!</string>
+  <string id="32028">Letöltés megszakítva!</string>
+  <string id="32029">cd-kép nem található?</string>
+  <string id="32030">Kérlek járulj hozzá! Töltsd fel a cd-képeidet</string>
+  <string id="32031">a www.xbmcstuff.com-on</string>
+  <string id="32032">Előadó választása</string>
+  <string id="32033">Nem található az XBMCSTUFF.com-on</string>
+  <string id="32034">Nem található cd-kép ehhez</string>
+  <string id="32035"> *CD-KÉP LETÖLTÉSE* </string>
+  <string id="32036">cd-képek keresése</string>
+  <string id="32037">Helyi előadók beolvasása</string>
+  <string id="32038">Előadó: </string>
+  <string id="32039">Album: </string>
+  <string id="32040">Befejezve</string>
+  <string id="32041">Új cd-kép letöltve</string>
+  <string id="32042">cd-kép kezelő</string>
+  <string id="32043">Helyi előadók:</string>  <!-- string insert for local artist -->
+  <string id="32044">Helyi cd-képek:</string>  <!-- string insert for local cdARTs -->
+  <string id="32045">Helyi albumok:</string>  <!-- string insert for local albums -->
+  <string id="32046">cd-képek automatikus letöltése</string>
+  <string id="32047">Letöltés.....</string>
+  <string id="32048">Felismert előadók listájának beolvasása....</string>
+  <string id="32049">Talált előadók: %s</string>
+  <string id="32050">Adatbázis felállítás megszakadt...</string>
+  <string id="32051">A kiegészítő adatbázis elengedhetetlen a programnak!</string>
+  <string id="32052">Kérlek menj a haladó menübe és</string>
+  <string id="32053">frissítsd a kiegészítő adatbázist</string>
+  <string id="32054">/Előadó/Album.png</string>
+  <string id="32055">/előadó - album.png</string>
+  <string id="32056">cd-kép másolva</string>
+  <string id="32057">cd-képek másolása befejeződött</string>
+  <string id="32058">cd-képek itt tárolva</string>
+  <string id="32059"> cd-kép másolva</string>
+  <string id="32060">cd-képek másolása...</string>
+  <string id="32061">Biztonsági másolat</string>
+  <string id="32062">Egyedi cd-kép hely a gépeden</string>
+  <string id="32063">Helyi képek másolása</string>
+  <string id="32064">Egyedi cd-képek helye: %s</string>
+  <string id="32065">Helyi és online cd-képek összehasonlítása...</string>
+  <string id="32066">Hiba az XBMCSTUFF.COM-ra való kapcsolódáskor, időtúllépés</string>
+  <string id="32067">cd-kép fájlok mentése</string>
+  <string id="32068">Helyreállítás mentésből</string>
+  <string id="32069">cd-képek helyreállítása biztonsági mentésből...</string>
+  <string id="32070">cd-kép helyreállítva biztonsági mappából</string>
+  <string id="32071">Beállítások nem lettek megadva!</string>
+  <string id="32072">Kérlek menj a beállítások menübe...</string>
+  <string id="32073">Utána haladó: kiegészítő adatbázis frissítése</string>
+  <string id="32074">Kép a biztonsági mentés mappába</string>
+  <string id="32075">cd-kép törlése</string>
+  <string id="32076">Egyedi mappába a feltöltéshez</string>
+  <!-- Colour choices for labels -->
+  <string id="32077">Egyedi színek</string>
+  <string id="32078">Zöld</string>
+  <string id="32079">Kék</string>
+  <string id="32080">Piros</string>
+  <string id="32081">Sárga</string>
+  <string id="32082">Narancs</string>
+  <string id="32083">Fehér</string>
+  <string id="32084">Türkiz</string>
+  <string id="32085">Lila</string>
+  <string id="32086">Rózsaszín</string>
+  <string id="32087">   Szín a felismert előadókhoz</string>
+  <string id="32088">   Szín a nem felismert előadókhoz</string>
+  <string id="32089">   Szín a csak XBMCSTUFF ablumokhoz</string>
+  <string id="32090">   Szín a csak a gépeden lévőkhöz</string>
+  <string id="32091">   Szín a mindkét helyen lévőkhöz</string>
+  <string id="32092">   Szín a nem párosított albumokhoz</string>
+  <string id="32093">   Szín a helyi cd-kép listához</string>
+  <string id="32094">Címkék egyedi színeinek engedélyezése</string>
+  <string id="32095">Fájlmappák</string>
+  <string id="32096">duplikált volt</string>
+  <string id="32097">    Resize Unique cdARTs?</string>
+</strings>
